--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,11 +38,21 @@
         android:layout_margin="16dp"/>
 
     <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnMessaging"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="المراسلة المباشرة"
+        app:layout_constraintTop_toBottomOf="@id/btnScanQr"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"/>
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/btnHelp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="@string/btn_help"
-        app:layout_constraintTop_toBottomOf="@id/btnScanQr"
+        app:layout_constraintTop_toBottomOf="@id/btnMessaging"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_margin="16dp"/>
