--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -29,5 +29,14 @@
         android:textSize="10sp"
         android:layout_marginTop="4dp"
         android:textColor="@android:color/darker_gray"/>
+        
+    <TextView
+        android:id="@+id/statusText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="10sp"
+        android:layout_marginTop="2dp"
+        android:textColor="@android:color/holo_blue_dark"
+        android:visibility="gone"/>
 
 </LinearLayout>
